--- a/portfolio/src/app/constants/i18n/dictionaries/en.json
+++ b/portfolio/src/app/constants/i18n/dictionaries/en.json
@@ -1,5 +1,6 @@
 {
   "myName": "Kenta Yamada",
+  "siteName": "Kenta Yamada's Portfolio",
   "nav": {
     "backToHome": "Back to home",
     "loading": "Loading...",
