--- a/portfolio/src/app/constants/i18n/dictionaries/en.json
+++ b/portfolio/src/app/constants/i18n/dictionaries/en.json
@@ -2,9 +2,7 @@
   "myName": "Kenta Yamada",
   "siteName": "Kenta Yamada's Portfolio",
   "nav": {
-    "backToHome": "Back to home",
-    "loading": "Loading...",
-    "loadingDescription": "The Page is Loading"
+    "backToHome": "Back to home"
   },
   "articles": {
     "toc": "Table of Contents",
