--- a/portfolio/src/app/constants/i18n/dictionaries/ja.json
+++ b/portfolio/src/app/constants/i18n/dictionaries/ja.json
@@ -2,9 +2,7 @@
   "myName": "山田 健太",
   "siteName": "山田健太のポートフォリオ",
   "nav": {
-    "backToHome": "トップに戻る",
-    "loading": "読み込み中...",
-    "loadingDescription": "読み込み中です"
+    "backToHome": "トップに戻る"
   },
   "articles": {
     "toc": "目次",
