--- a/portfolio/src/app/constants/i18n/dictionaries/en.json
+++ b/portfolio/src/app/constants/i18n/dictionaries/en.json
@@ -3,6 +3,7 @@
   "siteName": "Kenta Yamada's Portfolio",
   "faq": "FAQ",
   "backToHome": "Back to home",
+  "utilities": "Utilities",
   "articles": {
     "toc": "Table of Contents",
     "latest": "Latest",
