--- a/portfolio/src/app/constants/i18n/dictionaries/ja.json
+++ b/portfolio/src/app/constants/i18n/dictionaries/ja.json
@@ -3,6 +3,7 @@
   "siteName": "山田健太のポートフォリオ",
   "faq": "FAQ",
   "backToHome": "ホームに戻る",
+  "utilities": "ユーティリティ",
   "articles": {
     "toc": "目次",
     "latest": "最新記事",
